--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
         #settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Build with Maven
-      run: mvn -B package --file pom.xml -s settings.xml
+      run: mvn -B package --file pom.xml #-s settings.xml
 
     - uses: actions/checkout@v2
     - name: Build the Docker image
