--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,6 +24,6 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml #-s settings.xml
 
-    - uses: actions/checkout@v2
+    #- uses: actions/checkout@v2
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
