--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
@@ -26,4 +30,6 @@ jobs:
 
     #- uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile -t gsjagdale/shri-app-registry
+    - name: Push Docker image
+      run: docker push gsjagdale/shri-app-registry
